Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103515

QSystemTrayIcon/macOS: Cannot quit the app when the context menu is opened by secondary click

XMLWordPrintable

    • macOS
    • da754d5b6 (dev), 7f5c5eb9c (6.4)

      How to reproduce
      1. Use https://doc.qt.io/qt-6/qtwidgets-desktop-systray-example.html
      2. Build and run the sample
      3. Click the tray icon with the secondary click (aka. Right-click) and choose "Quit" from the context menu

      Expected result
      The app quits and the icon disappears

      Actual result
      The app window closes but the app keeps running and the icon stays visible.
      If you click the icon again, the app quits and the icon disappears.

      The app does expected behavior when the click in step 3 is done by Left-click

        For Gerrit Dashboard: QTBUG-103515
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes